fix: change z-index for header

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -62,7 +62,7 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
-    z-index: 101;
+    z-index: 100;
     margin-bottom: 5px;
 
     &.header-shadow {
